--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../panply game/VeilOfShadows.exe"
+export_path="../../../panply game/Veil Of Shadows.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -20,7 +20,7 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
@@ -35,12 +35,12 @@ application/modify_resources=true
 application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
-application/file_version="1.1"
-application/product_version="1.0"
-application/company_name="rocketpaku"
-application/product_name="Veil Of Sahdows"
-application/file_description=""
-application/copyright=""
+application/file_version="1.2.0"
+application/product_version="1.2.0"
+application/company_name="RocketPaku"
+application/product_name="Veil Of Shadows"
+application/file_description="Panoply Game"
+application/copyright="Heh"
 application/trademarks=""
 application/export_angle=0
 application/export_d3d12=0
