--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../panply game/Veil Of Shadows.exe"
+export_path="../../../panply game/Veil_Of_Shadows.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -32,11 +32,11 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="res://PNG/ve2.png"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
-application/file_version="1.2.0"
-application/product_version="1.2.0"
+application/file_version="1.2.1"
+application/product_version="1.2.1"
 application/company_name="RocketPaku"
 application/product_name="Veil Of Shadows"
 application/file_description="Panoply Game"
